--- a/projects/boston-complete-streets/index.mdx
+++ b/projects/boston-complete-streets/index.mdx
@@ -1,21 +1,22 @@
 ---
 title: "Boston Complete Streets"
 date: "2010-06-01"
+date_end: "2013"
 category: "project"
 client: "Utile, for City of Boston"
-tags: ["Transportation planning", "Public realm", "Urban design"]
+tags: ["Urban planning", "Mobility", "Public realm"]
 thumb: "./thumb.png"
 ---
 
 The Boston Complete Streets initiative encompasses a 500-page illustrated manual and a [website](http://www.bostoncompletestreets.org), and is among the most comprehensive, up-to-date (and visually compelling) streetscape design standards in the country. It not only addresses the physical dimension of designing great streets, but also covers operations management, regulatory implementation, and the use of digital technology. As the lead designer for this project, I conceptualized and developed the Guidelines' distinctive visual language that is capable of both communicating technical detail and engaging the general public.
 
-The Boston Complete Streets guidelines won the 2015 APA National Award for communication design.
+The Boston Complete Streets guidelines won the 2015 APA National Award for excellence.
 
 ![intersections](5.CS_Intersections.jpg "Intersection design principles")
 
-![tree pit](tree-pit.png)
+![tree pit](tree-pit.png "Technical details")
 
 ![reclaim space](2.reclaim-space.jpg "Reclaim sidewalk space")
 
-![process](1.Process.jpg "Regulatory process")
+![process](1.Process.jpg "Clarifying processes for Complete Streets implementation")
 
