--- a/projects/charlestown-navy-yard/index.mdx
+++ b/projects/charlestown-navy-yard/index.mdx
@@ -1,17 +1,31 @@
 ---
 title: "Charlestown Navy Yard Visitor Experience Plan"
+title_short: "Customer Experience for a National Park Site"
 date: "2017-03"
 date_end: "2018-03"
 category: "project"
 client: "National Park Service"
-tags: ["Public realm", "Urban design"]
+tags: ["Urban planning", "Public realm"]
 thumb: "./thumb.jpg"
 ---
-[Sasaki](http://www.sasaki.com) worked with the National Park Service and the USS Constitution Museum to reimagine the visitor experience at Charlestown Navy Yard, home to the famed frigate _USS Constitution_, one of the country's preeminent naval attractions. As the project manager at Sasaki, I oversaw the study, which focuses on transforming this 30-acre park campus on a prime stretch of the downtown Boston waterfront into a vibrant and forward-looking urban waterfront experience. The study culminated in a high-level design vision for the site, strategies for greater connectivity with the rest of the city, innovative ideas for education and outreach programs, as well as a future governance strategy that brings disparate parties--NPS, the Museum, the Navy, the City, and the community--together for the first time.
+At [Sasaki](http://www.sasaki.com), I worked with the National Park Service and the USS Constitution Museum to reimagine the visitor experience at Charlestown Navy Yard, home to the famed frigate _USS Constitution_, one of the country's preeminent historical attractions. As the project manager, I oversaw a study that focused on transforming this historic National Park site into both an innovative visitor experience and a forward-looking urban public realm destination. 
 
-![Waterfront context](9.context.jpg "CNY's context within Boston's bustling waterfront")
+The study culminated in a strategic vision for design interventions and capital improvements, innovative ideas for education and outreach programs, as well as a governance strategy that brings disparate stakeholders--NPS, the USS Constitution Museum, the Navy, the City, and the community--together for the first time.
+
+<h4>Data-driven user experience research</h4>
+
+I undertook a data-driven UX research process that aimed to understand why people come to the Navy Yard, what they do once they are here, and what they hope to be able to do in the future. The exercise included interviews, surveys and collaborative mapping, and large-scale data parsing of visitor reviews.
+
 ![Tourism context](8.research.jpg "CNY's position relative to other Boston area tourist attractions")
-![Visitor engagement](_DSF0039.JPG "Visitor research and engagement")
+
+![Visitor engagement](ux.jpg "Visitor research and engagement")
+
+<h4>Strategic Recommendations</h4>
+
+Key to the Navy Yard's future is collaboration among diverse stakeholders: the National Park Service, the City of Boston, the USS Constitution Museum, and the Navy all have a claim to the site. I fostered consensus among this group, and solidified this consensus into long-term strategic recommendations.
+
+![Parti](3.parti.jpg "Big picture ideas for enhancing connectivity and visitor amenities")
+
 ![Entry area](4.entry.jpg "Entry area")
+
 ![Pier 1 area](5.pier1.jpg "Vision for enhanced Pier 1, showing 4-season activities and space for flexible programs")
-![Parti](3.parti.jpg)
