--- a/projects/gr-parks-masterplan/index.mdx
+++ b/projects/gr-parks-masterplan/index.mdx
@@ -1,16 +1,18 @@
 ---
 title: "City of Grand Rapids Parks Masterplan"
+title_short: "Citywide Parks and Open Space Strategy"
 date: "2016-02"
 date_end: "2017-02"
 category: "project"
 client: "City of Grand Rapids"
-tags: ["Public realm", "Parks planning", "Community engagement"]
+tags: ["Urban planning", "Public realm", "Community engagement"]
 thumb: "./thumb.gif"
 ---
+
 As project manager at [Sasaki](http://www.sasaki.com/), I worked with the City of Grand Rapids and HR&A Advisors to develop a long-term strategy for the design, enhancement, operation, management, and funding of the city's Parks Department as it emerges from a long period of disinvestment. The study focuses on developing actionable projects and building partnerships with the city’s philanthropic and private sectors, with guidance from the city’s wider citizenry. A robust stakeholder engagement process lay the foundation for the successful implementation of the project.
 
-![Engagement](5.engagement.JPG "A year-long public engagement campaign to solicit ideas for the parks system included efforts such as pop-up storefronts.")
-![Funding](7.funding.jpg "Funding strategies that leverage public and private resources")
-![Implementation](6.implementation.jpg "Clear, actionable implementation strategies")
 ![System inventory](3.inventory.jpg "A rigorously data-driven discovery phase revealed key strengths in Grand Rapids's parks system, as well as gaps in service delivery.")
 ![System inventory](4.inventory.jpg "Benchmarking against national standards")
+![Engagement](5.engagement.jpg "A year-long public engagement and user research process to drove needs discovery and generated new ideas for the parks system")
+![Implementation](6.implementation.jpg "Clear, actionable strategies focused on capital improvements, enhanced operational standards, programs to engage new demographics, and staffing models")
+![Funding](7.funding.jpg "Funding strategies that leverage public and private resources")
