--- a/projects/art-of-the-march/index.mdx
+++ b/projects/art-of-the-march/index.mdx
@@ -3,13 +3,19 @@ title: "Art of the March"
 date: "2017-07-01"
 category: "project"
 client: "Research"
-tags: ["Information design", "Data visualization"]
+tags: ["Product design", "Data visualization"]
 thumb: "./thumb.gif"
 ---
 
-This project focuses on the representation of political dissent, specifically through the 6,000 signs collected from the Boston Women’s March. Working with Dietmar Offenhuber, Navarjun Grewal, and a team of other researchers at Northeastern University, I’m developing an interface that facilitates the visual exploration of these signs. Work is underway to categorize and group these signs, based on dimensionality reduction and machine learning clustering techniques, revealing a picture of the broad range of political concerns represented at the protest. [Link to project here.](http://www.artofthemarch.boston/)
+I have taught data visualization at Northeastern University’s IDV and Harvard University’s Masters in Design Engineering programs, and frequently take on speculative projects as well as exhibition work. 
 
-![Cluster view](1.cluster-2.jpeg "Clustering signs by thematic similarity")
+I’m particularly interested in advancing data visualization’s discursive potential and its possibilities as a new “way of knowing”. My teaching and project work applies data visualization’s power to generate new knowledge, discourse, and activism towards new domains of interest (e.g. urbanism, political speech), with often surprisingly productive results.
+
+<h4>Art of the March: Making Sense of Political Speech</h4>
+
+This speculative project focuses on representing and analyzing political speech, specifically through the 6,000 hand-made signs collected at the Boston Women’s March in 2017. Working with Dietmar Offenhuber and a team of other researchers at Northeastern University, I developed a data visualization that facilitates the visual exploration of this large graphic archive, as well as the classification and clustering of embeddings.
+
+![Cluster view](1.cluster.jpeg "Clustering signs by thematic similarity")
 
 Hiya hiya 
 
