--- a/projects/go-boston-2030/index.mdx
+++ b/projects/go-boston-2030/index.mdx
@@ -1,20 +1,30 @@
 ---
 title: "Go Boston 2030"
+title_short: "Citywide Mobility Strategy"
 date: "2014-07"
 date_end: "2015-12"
 category: "project"
 client: "Utile, for City of Boston"
-tags: ["Transportation planning", "Data visualization", "Community engagement"]
+tags: ["Urban planning", "Mobility", "Data visualization", "Community engagement"]
 thumb: "./thumb.jpg"
 ---
-As lead designer at [Utile](http://www.utiledesign.com), I worked with Nelson Nygaard (transportation planning) and IISC (public engagement) on _Go Boston 2030_, Boston's 20-year strategic mobility plan for the entire city. I led the effort to collect, analyze, and visualize data in order to communicate and predict the complex mobility needs of the city in the future. I developed digital tools to clarify these issues both to transportation professionals and the larger public. The resulting insights shed light not only on transportation per se, but also on the complex relationship between physical and economic mobility, equity, and environmental justice.
+As lead designer at [Utile](http://www.utiledesign.com), I worked with a team led by Boston Transportation Department to develop _Go Boston 2030_, the city's 20-year strategic mobility plan. 
 
-![walk score](6.walkscore-01.jpg "How car-dependent one is in Boston is very much related to one's socio-economic circumstances. This highlights equity as a key consideration in future mobility planning. (data courtesy of Walkscore)")
+<h4>Making sense of urban mobility through data</h4>
 
-![job distribution](5.jobs-02.jpg "Similarly, the spatial distribution of jobs create equity considerations. While white collar jobs (blue and green) are concentrated and well-served by public transit, lower-paying blue collar jobs (red) are more spread, imposing additional transportation cost burdens on workers who need to get to them.")
+The plan was widely lauded for its innovative use of data to map Boston's mobility challenges and elucidate the complex relationship between urban mobility and issues of housing, jobs and economic development, and racial equity. I led the data analysis effort and developed digital tools that allowed planning professionals to visually explore the resulting insights.
 
-![commute time](4.posters.jpg)
+![walk score](6.walkscore-01.jpg "Walkability as a luxury amenity: how car-dependent one is in Boston is very much related to one's socio-economic status, which highlights equity as a key driver of future mobility planning (data courtesy of Walkscore)")
 
-![commute in out](4.In-out-09.jpg)
+![job distribution](5.jobs-02.jpg "While white collar jobs (blue and green) are concentrated in areas well-served by hub-and-spoke transit systems, blue collar jobs (red) are more spread across the urban periphery, imposing additional cost burdens on workers who need to get to them")
 
-![subway](2.posters2.jpg)
+<h4>Building insights with the community</h4>
+
+I translated learnings from the data analysis effort into engaging visualizations for the public, creating a forum in which a city-wide community can debate mobility issues and collectively chart a path forward.
+
+![commute time](4.posters.jpg "Example of public-facing visualization, highlighting the relationship between one's commute and issues of job accessibility and economic opportunity")
+
+![commute in out](4.In-out-09.jpg "Where trips come from")
+
+![public forum](public-forum.jpeg "One of many public forums")
+
