add new projects

--- a/projects/art-of-the-march/index.mdx
+++ b/projects/art-of-the-march/index.mdx
@@ -1,23 +1,15 @@
 ---
 title: "Art of the March"
-date: "2017-07-01"
+date: "2017-07"
+date_end: "2018"
 category: "project"
-client: "Research"
-tags: ["Product design", "Data visualization"]
+tags: ["Technology prototyping", "Data visualization"]
 thumb: "./thumb.gif"
 ---
+This design research project attempts to develop alternative ways of analyzing political speech, specifically through the 6,000 hand-made signs collected at the Boston Women’s March in 2017. Working with Dietmar Offenhuber and a team of other researchers at Northeastern University, I developed a data-driven application that facilitates the visual exploration of this large graphic archive, as well as more detailed thematic and semantic analysis and comparisons.
 
-I have taught data visualization at Northeastern University’s IDV and Harvard University’s Masters in Design Engineering programs, and frequently take on speculative projects as well as exhibition work. 
+The project was shortlisted as one of the best data visualization projects by Kantar _Information is Beautiful_ award in 2018
 
-I’m particularly interested in advancing data visualization’s discursive potential and its possibilities as a new “way of knowing”. My teaching and project work applies data visualization’s power to generate new knowledge, discourse, and activism towards new domains of interest (e.g. urbanism, political speech), with often surprisingly productive results.
-
-<h4>Art of the March: Making Sense of Political Speech</h4>
-
-This speculative project focuses on representing and analyzing political speech, specifically through the 6,000 hand-made signs collected at the Boston Women’s March in 2017. Working with Dietmar Offenhuber and a team of other researchers at Northeastern University, I developed a data visualization that facilitates the visual exploration of this large graphic archive, as well as the classification and clustering of embeddings.
-
+![Cluster view](1.cluster-2.jpeg "Graphic signs are annotated, machine-processed, and turned into embedding projections, allowing researchers to classify them in terms of graphic, thematic, and semantic similarity")
 ![Cluster view](1.cluster.jpeg "Clustering signs by thematic similarity")
-
-Hiya hiya 
-
-![Cluster view](1.cluster-2.jpeg "Alternative cluster view")
-![Single view](2.single.jpeg)
+![Single view](2.single.jpeg "Single signs")
