--- a/projects/about/about.mdx
+++ b/projects/about/about.mdx
@@ -7,14 +7,14 @@ contact: "siqi.zhu [at] gmail.com"
 <p className="lead">Hello! I’m a NYC-based urbanist-technologist working across technology incubation, human-centered design, and the built environment.</p>
 
 <h3>Technology incubation and prototyping</h3>
-<p>I turn nascent technology concepts into concrete designs, working prototypes, and real-world pilots through a problem-driven, human-centered process, and help steer them towards problem-solution and product-market fit, with a particular focus on mobility innovations, technologies in the streets and public realm, IoT systems, and other technologies that cross the digital-physical divide.</p>
+<p>I turn nascent technology concepts into designs, prototypes, and real-world pilots through a problem-driven, human-centered process, and steer them towards problem-solution and product-market fit, with a particular focus on technologies relating to streets, mobility and public realm; IoT systems; and other technologies that cross the digital-physical divide.</p>
 
 <h3>Urban development</h3>
-<p>I lead and manage complex master planning and strategic urban consulting projects, including design leadership, team oversight, and client and community relationship management. Among other experiences, I have led award-winning streets design and city-wide mobility strategies for the City of Boston; a long-term development framework for ITESM, Mexico’s largest private university system; and several high-profile private real estate master plans.</p>
+<p>I lead complex urban planning and strategic consulting projects, including design leadership, team oversight, and stakeholder relationship management. Among other experiences, I have led award-winning streets design and city-wide mobility strategies for the City of Boston; a long-term development framework for ITESM, Mexico’s largest private university system; and several high-profile private real estate master plans.</p>
 
-<h3>Urban technology advisory</h3>
-<p>I also advise urban development clients around the country on how design innovations and new technologies can make their developments more sustainable, inclusive, and centered on human quality of life. I draw on the state of the art in new mobility, streets and public realm, sustainable infrastructure, and building technologies, synthesize them with client-specific needs and project-specific context, and develop actionable plans for de-risking pilots and at-scale implementation.</p>
+<h3>Urban innovation advisory</h3>
+<p>I also advise developers and cities on how design innovations and new technologies can make urban development more sustainable, inclusive, and centered on human quality of life. I draw on broad knowledge of the state of the art and synthesize it with client-specific and project-specific needs, and develop actionable plans for pilots and at-scale implementation.</p>
 
-<p>I combine these three roles as a <span className='highlight'>Director of Planning at Sidewalk Labs</span>, where I provide urban innovation consulting to the real estate development industry, lead a technology development program focused on “streets of the future”, and oversaw key aspects of the flagship Quayside project. Previously, I led the product function at <span className='highlight'>Envelope.city</span>, where I managed and launched data-driven digital products; and managed urban development projects at <span className='highlight'>Sasaki</span> and <span className='highlight'>Utile.</span></p>
+<p>I combine these three roles as a Director of Planning at <span className='highlight'>Sidewalk Labs</span>, where I provide urban innovation consulting to the real estate development industry, lead a technology development program focused on “streets of the future”, and oversaw key aspects of the flagship Quayside project. Previously, I led the product function at <span className='highlight'>Envelope.city</span> and managed urban development projects at <span className='highlight'>Sasaki</span> and <span className='highlight'>Utile.</span></p>
 
-<p>My professional work has also incubated interests in critical issues around the legibility and governance of contemporary cyber-physical technology systems; technology controversies and technology counterfactuals; and new roles and competencies for the environmental design professions. I’m thinking through some of these issues through teaching, currently as a lecturer in <span className='highlight'>Harvard’s Masters of Design Engineering program</span>, a program focused on cultivating a new kind of problem-driven, system-centered technology design practice.</p>
+<p>My professional work is related to my critical interests at the intersection of urbanism and technology: the legibility and governance of contemporary cyber-physical technology systems; technology controversies and technology counterfactuals; and new roles and competencies for the design professions. I’m thinking through these issues through design research and teaching, currently as a lecturer in <span className='highlight'>Harvard’s Masters of Design Engineering program</span>, a program focused on cultivating a new kind of system-centered technology design-engineering practice.</p>
