--- a/projects/mit-senseable-city/index.mdx
+++ b/projects/mit-senseable-city/index.mdx
@@ -4,7 +4,7 @@ date: "2013"
 date_end: "2014"
 category: "project"
 client: "MIT"
-tags: ["Technology prototyping", "Data visualization", "Product management"]
+tags: ["Technology prototyping", "Data visualization", "Product management", "Product design"]
 thumb: "./thumb.jpg"
 ---
 As an expert in data visualization and data-driven digital products at MIT Senseable City Lab, I led the concept development, design, and delivery of technology prototypes that explore new ways of making large urban data sets more engaging, understandable, and actionable.
