Add new projects, re-label projects

--- a/projects/boston-complete-streets/index.mdx
+++ b/projects/boston-complete-streets/index.mdx
@@ -4,7 +4,7 @@ date: "2010-06-01"
 date_end: "2013"
 category: "project"
 client: "Utile, for City of Boston"
-tags: ["Urban planning", "Mobility", "Public realm"]
+tags: ["Urban development", "Mobility", "Public realm"]
 thumb: "./thumb.png"
 ---
 
