--- a/projects/charlestown-navy-yard/index.mdx
+++ b/projects/charlestown-navy-yard/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Charlestown Navy Yard Visitor Experience Plan"
-title_short: "Customer Experience for a National Park Site"
+title: "Charlestown Navy Yard Visitor Experience Strategy"
+title_short: "National Park Visitor Experience Strategy"
 date: "2017-03"
 date_end: "2018-03"
 category: "project"
 client: "National Park Service"
-tags: ["Urban planning", "Public realm"]
+tags: ["Urban development", "Public realm"]
 thumb: "./thumb.jpg"
 ---
 At [Sasaki](http://www.sasaki.com), I worked with the National Park Service and the USS Constitution Museum to reimagine the visitor experience at Charlestown Navy Yard, home to the famed frigate _USS Constitution_, one of the country's preeminent historical attractions. As the project manager, I oversaw a study that focused on transforming this historic National Park site into both an innovative visitor experience and a forward-looking urban public realm destination. 
