--- a/projects/data-vis-urbanism/index.mdx
+++ b/projects/data-vis-urbanism/index.mdx
@@ -1,9 +1,10 @@
 ---
-title: "Misc. Data Visualization Research and Teaching"
+title: "Research & Teaching on Urban-scale Data Visualization"
 title_short: "Data Visualization x Urbanism"
 date: "2014-09"
+date_end: "Present"
 category: "project"
-tags: ["Technology prototyping", "Data visualization"]
+tags: ["Urban technology", "Technology prototyping", "Data visualization"]
 thumb: "./thumb.jpg"
 ---
 Through design research projects, exhibition work, and teaching (at Northeastern’s IDV and Harvard MDE programs), I’ve been exploring the possibilities of data visualization as a new “way of knowing”. The projects below exploit data visualization’s power to generate new knowledge, discourse, and activism, particularly as they relate to my core domain of interest, urbanism.
