--- a/projects/envelope-city/index.mdx
+++ b/projects/envelope-city/index.mdx
@@ -1,16 +1,31 @@
 ---
 title: "Envelope.city"
-title_short: "Parametric Urban Design"
+title_short: "Envelope.city"
 date: "2018"
 date_end: "2019"
 category: "project"
-tags: ["Product design", "Product management", "Data visualization"]
+tags: ["Urban technology", "Product development"]
 thumb: "./thumb.png"
 ---
-I led product management and design at [Envelope.city](https://envelope.city/), a software startup co-founded by Sarah Williams of [MIT Civic Data Design Lab](https://civicdatadesignlab.mit.edu/) and [SHoP architects](https://www.shoparc.com/). The software parametrically generates massing study scenarios based on New York City’s complex and arcane zoning resolution, dramatically simplifying the process of assessing development potential at the lot, block, neighborhood, and citywide scales.
+I led product development at [Envelope.city](https://envelope.city/), a software startup co-founded by Sarah Williams of [MIT Civic Data Design Lab](https://civicdatadesignlab.mit.edu/) and [SHoP architects](https://www.shoparc.com/). Envelope.city programmatically generates and visualizes massing scenarios based on New York City’s complex zoning resolution, dramatically simplifying answers to the question of “what can I build” at the lot, neighborhood, and city-wide scales.
 
-I led the research, scoping, prioritization, and design of new product features, including a new “development opportunity search engine”. I worked with Engineering to ensure the timely release of feature, and worked with the CEO to engage customers and steer the company’s strategic priorities.
+![screen cap 2](screen-cap-2.png "Envelope uses a zoning rules engine and computational 3D design to facilitate zoning studies, based on an intuitive search/select/test interaction paradigm.")
 
-![screen cap 1](screen-cap-1.png "Envelope's parametric massing generation algorithm")
+## Launching Envelope's spec search product
 
-![screen cap 2](screen-cap-2.png "User interface")
+I led early concept, research, product strategy, design, and launch of Envelope’s “spec search” product, which empowers real estate users to find development sites based on specific and potentially complex criteria. 
+
+![spec search screen flow](spec-search-screenflow-1.png "How users find development sites: build queries, contextual exploration, refine and repeat")
+
+A sample criteria might be "find a site that can accommodate at least 100 residential units plus ground floor retail, located on a major avenue within 5 minutes of a subway, that can also potentially tap into at least 10,000 ZFA of adjacent air rights". 
+
+![query builder](query-builder.png "To facilitate complex search strategies such as these, I built the data model for a NYC-wide development site database, and designed a flexible and extensible "query builder" design system for the frontend.")
+
+## Outcome: a new business model for Envelope.city
+
+Spec search enabled a successful business transition for Envelope from a pure SaSS design software to a hybrid SaSS/consulting model targeted at high-value real estate customers.
+
+![multi site](multi-site.jpg "The spec search product became the basis of a successful hybrid SaSS/advisory business, focused on helping real estate customers surface development opportunity sites at scale.")
+
+
+
