--- a/projects/go-boston-2030/index.mdx
+++ b/projects/go-boston-2030/index.mdx
@@ -5,7 +5,7 @@ date: "2014-07"
 date_end: "2015-12"
 category: "project"
 client: "Utile, for City of Boston"
-tags: ["Urban planning", "Mobility", "Data visualization", "Community engagement"]
+tags: ["Urban development", "Mobility", "Data visualization"]
 thumb: "./thumb.jpg"
 ---
 As lead designer at [Utile](http://www.utiledesign.com), I worked with a team led by Boston Transportation Department to develop _Go Boston 2030_, the city's 20-year strategic mobility plan. 
