--- a/projects/gr-parks-masterplan/index.mdx
+++ b/projects/gr-parks-masterplan/index.mdx
@@ -5,7 +5,7 @@ date: "2016-02"
 date_end: "2017-02"
 category: "project"
 client: "City of Grand Rapids"
-tags: ["Urban planning", "Public realm", "Community engagement"]
+tags: ["Urban development", "Public realm"]
 thumb: "./thumb.gif"
 ---
 
