--- a/projects/seaport-planning/index.mdx
+++ b/projects/seaport-planning/index.mdx
@@ -4,7 +4,7 @@ date: "2012"
 date_end: "2018"
 category: "project"
 client: "Massport, BCEC, private real estate developer"
-tags: ["Urban planning", "Public realm"]
+tags: ["Urban development", "Public realm"]
 thumb: "./thumb.jpg"
 ---
 As project manager and urban designer at Sasaki and Utile, I’ve been engaged in several high-profile planning and real estate development projects in Boston’s Seaport district. My work involved leading the urban design component (planning framework, massing studies, public realm, mobility, and infrastructure) of a long-term strategic expansion plan of the Boston Convention and Exhibition Center; a comprehensive reimagining of the public realm around the World Trade Center; and WS Development’s Seaport Square project, Boston’s largest private real estate development project to date.
