--- a/projects/art-of-the-march/index.mdx
+++ b/projects/art-of-the-march/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Art of the March"
-date: "2017-07"
+date: "2017"
 date_end: "2018"
 category: "project"
 tags: ["Technology prototyping", "Data visualization"]
