--- a/projects/about/about.mdx
+++ b/projects/about/about.mdx
@@ -4,17 +4,18 @@ category: "about"
 resume: "./siqi_zhu_resume.pdf"
 contact: "siqi.zhu [at] gmail.com"
 ---
-<p className="lead">Hello! I’m a NYC-based urbanist-technologist working across technology incubation, human-centered design, and the built environment.</p>
+<p className="lead">Hello! I’m a NYC-based urbanist-technologist working across urban development, strategic design, and urban technologies.</p>
 
-<h3>Technology incubation and prototyping</h3>
-<p>I turn nascent technology concepts into designs, prototypes, and real-world pilots through a problem-driven, human-centered process, and steer them towards problem-solution and product-market fit, with a particular focus on technologies relating to streets, mobility and public realm; IoT systems; and other technologies that cross the digital-physical divide.</p>
+<h3>Purposeful urban technologies</h3>
 
-<h3>Urban development</h3>
-<p>I lead complex urban planning and strategic consulting projects, including design leadership, team oversight, and stakeholder relationship management. Among other experiences, I have led award-winning streets design and city-wide mobility strategies for the City of Boston; a long-term development framework for ITESM, Mexico’s largest private university system; and several high-profile private real estate master plans.</p>
+<p>I have turned nascent urban technology concepts into designs, prototypes, real-world urban pilots, and products, with deep domain expertise in mobility, spatial data, and hybrid digital-physical systems. I’m particularly interested in how technologies are developed, deployed, and operationalized in a way that aligns with real-world purpose, systemic good, and human experience of place.</p>
 
-<h3>Urban innovation advisory</h3>
-<p>I also advise developers and cities on how design innovations and new technologies can make urban development more sustainable, inclusive, and centered on human quality of life. I draw on broad knowledge of the state of the art and synthesize it with client-specific and project-specific needs, and develop actionable plans for pilots and at-scale implementation.</p>
+<h3>Strategic design for cities</h3>
 
-<p>I combine these three roles as a Director of Planning at <span className='highlight'>Sidewalk Labs</span>, where I provide urban innovation consulting to the real estate development industry, lead a technology development program focused on “streets of the future”, and oversaw key aspects of the flagship Quayside project. Previously, I led the product function at <span className='highlight'>Envelope.city</span> and managed urban development projects at <span className='highlight'>Sasaki</span> and <span className='highlight'>Utile.</span></p>
+I have led complex urban development projects at the scale of districts and cities, exercising design leadership and managing complex teams and stakeholder relationships. With a singular focus on creating sustainable, inclusive, and economic vibrant cities, I draw on a diverse range of design capabilities–[urban design](http://www.siqizhu.net/seaport-planning/), [experience and service design](https://www.siqizhu.net/charlestown-navy-yard/), digital prototyping, [data visualization](https://www.siqizhu.net/data-vis-urbanism/) and [data science](https://www.siqizhu.net/go-boston-2030/)–that are part of a broader “strategic design” agenda for cities.
 
-<p>My professional work is related to my critical interests at the intersection of urbanism and technology: the legibility and governance of contemporary cyber-physical technology systems; technology controversies and technology counterfactuals; and new roles and competencies for the design professions. I’m thinking through these issues through design research and teaching, currently as a lecturer in <span className='highlight'>Harvard’s Masters of Design Engineering program</span>, a program focused on cultivating a new kind of system-centered technology design-engineering practice.</p>
+<h3>Critical interests</h3>
+
+My professional work underpins my critical interests: how urban technologies and real estate development shape and are in turn shaped by the political economic regime of the contemporary city; the legibility and governance of emerging cyber-physical technology being deployed in urban space; technology controversies and technology counterfactuals; and evolving demands on the design professions to respond to these issues effectively.
+
+I currently work at Sidewalk Labs (now a part of Google), where my role spans urban development planning, technology incubation, and program management. I also teach at Harvard’s [Master of Design Engineering program](https://mde.harvard.edu/), where I work with students to design and prototype speculative technologies for societal good. I continue to undertake speculative and applied research projects with collaborators.
