--- a/projects/data-vis-urbanism/index.mdx
+++ b/projects/data-vis-urbanism/index.mdx
@@ -1,19 +1,17 @@
 ---
 title: "Research & Teaching on Urban-scale Data Visualization"
 title_short: "Data Visualization x Urbanism"
-date: "2014-09"
+date: "2014"
 date_end: "Present"
 category: "project"
 tags: ["Urban technology", "Technology prototyping", "Data visualization"]
 thumb: "./thumb.jpg"
 ---
-Through design research projects, exhibition work, and teaching (at Northeastern’s IDV and Harvard MDE programs), I’ve been exploring the possibilities of data visualization as a new “way of knowing”. The projects below exploit data visualization’s power to generate new knowledge, discourse, and activism, particularly as they relate to my core domain of interest, urbanism.
+As faculty at Northeastern's IDV program, I introduced an urban agenda to the program's data visualization and design pedagogy, focusing on its potential as a new "way of knowing cities" and re-problematizing urban issues. 
 
-![Hubway](hubway-1.jpeg "Hubway data visualization: understanding the mobility dynamics of cities through its bike share network (design research project developed as a teaching tool)
-")
+![Hubway](hubway-0.jpeg "Understanding the mobility dynamics of cities through its bike share network (design research project developed as a teaching tool)")
 
-Below are examples of student work, in which I trained students to use data visualization as a tool for urban research into key issues of our day, such as housing affordability and equity in municipal services provision.
-
+Students are challenged to use data visualization to generate new discourses and activism on issues such as spatial inequalities and the impact of tech platforms on cities.
 
 ![Irene de la Torre and Fu Xiangyi](311.jpg "Student work by Irene de la Torre and Fu Xiangyi, on 311 levels of service in Boston")
 
