--- a/projects/go-boston-2030/index.mdx
+++ b/projects/go-boston-2030/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Go Boston 2030"
 title_short: "Citywide Mobility Strategy"
-date: "2014-07"
-date_end: "2015-12"
+date: "2014"
+date_end: "2015"
 category: "project"
-client: "Utile, for City of Boston"
+client: "City of Boston (work done at Utile)"
 tags: ["Urban development", "Mobility", "Data visualization"]
 thumb: "./thumb.jpg"
 ---
