--- a/projects/seaport-planning/index.mdx
+++ b/projects/seaport-planning/index.mdx
@@ -3,7 +3,7 @@ title: "Boston Seaport Development Planning"
 date: "2012"
 date_end: "2018"
 category: "project"
-client: "Massport, BCEC, private real estate developer"
+client: "Massport, BCEC, private real estate developer (work done at Sasaki)"
 tags: ["Urban development", "Public realm"]
 thumb: "./thumb.jpg"
 ---
