--- a/projects/streets-of-the-future/index.mdx
+++ b/projects/streets-of-the-future/index.mdx
@@ -2,6 +2,7 @@
 title: "Streets of the Future"
 title_short: "Streets of the Future"
 date: "2019"
+date_end: "2021"
 category: "project"
 tags: ["Urban technology", "Technology prototyping", "Product development", "Mobility", "Public realm"]
 thumb: "./thumb.gif"
@@ -11,7 +12,7 @@ I led a ~$1 million R&D program at Sidewalk Labs, focused on envisioning “urba
 
 <h4>Designing Purposeful, Human-centered Use Cases</h4>
 
-The program starts with real-world needs and desired human-centered outcomes, and builds purposeful use cases for technology around these outcomes. With Colas and Arup, I undertook a strategic design process that resulted in use cases built around flexible curb space use, pedestrian safety, and vehicle charging.
+The program begins with researching real-world needs, desired human-centered outcomes, and new technology affordances, and builds purposeful use cases around these outcomes. With [Colas](https://www.colas.com/en/media/press-releases/signature-agreement-sidewalk-labs) (one of the world's largest infrastructure builders, and a key program partner) and Arup, I undertook a strategic design process that resulted in use cases built around flexible curb space management, pedestrian safety, and vehicle charging.
 
 ![Flex curb concept](./skop-1.jpg "Street Kit of Parts: manual of technology concepts")
 
@@ -26,7 +27,7 @@ One of the use cases resulted in the Flex Curb, a technology concept to enable d
 
 <h4>Designing for Digital-Physical Systems</h4>
 
-A meta-objective for the Flex Curb is to build a hybrid digital-physical system in the real world, integrating disparate technology components within a physical site and a common digital and operational overlay. 
+Designing hybrid digital-physical systems for the urban environment entail unique challenges in bringing together space, technology, and organizational form. I led the exploration of new design methods to address these challenges.
 
 ![Digital system overview](./di.jpg "I created digital integration drawings to show the holistic relationship between technologies, space, and people within a single system like the Flex Curb, and to allow disparate technology and urban design disciplines to work from a common basis-of-design")
 
