--- a/projects/charlestown-navy-yard/index.mdx
+++ b/projects/charlestown-navy-yard/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Charlestown Navy Yard Visitor Experience Strategy"
 title_short: "National Park Visitor Experience Strategy"
-date: "2017-03"
-date_end: "2018-03"
+date: "2017"
+date_end: "2018"
 category: "project"
-client: "National Park Service"
+client: "National Park Service (work done at Sasaki)"
 tags: ["Urban development", "Public realm"]
 thumb: "./thumb.jpg"
 ---
