--- a/projects/gr-parks-masterplan/index.mdx
+++ b/projects/gr-parks-masterplan/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "City of Grand Rapids Parks Masterplan"
 title_short: "Citywide Parks and Open Space Strategy"
-date: "2016-02"
-date_end: "2017-02"
+date: "2016"
+date_end: "2017"
 category: "project"
-client: "City of Grand Rapids"
+client: "City of Grand Rapids (work done at Sasaki)"
 tags: ["Urban development", "Public realm"]
 thumb: "./thumb.gif"
 ---
