minor style adjustments

--- a/projects/about/about.mdx
+++ b/projects/about/about.mdx
@@ -14,7 +14,7 @@ contact: "siqi.zhu [at] gmail.com"
 
 I have led complex urban development projects at the scale of districts and cities, exercising design leadership and managing complex teams and stakeholder relationships. With a singular focus on creating sustainable, inclusive, and economic vibrant cities, I draw on a diverse range of design capabilities–[urban design](http://www.siqizhu.net/seaport-planning/), [experience and service design](https://www.siqizhu.net/charlestown-navy-yard/), digital prototyping, [data visualization](https://www.siqizhu.net/data-vis-urbanism/) and [data science](https://www.siqizhu.net/go-boston-2030/)–that are part of a broader “strategic design” agenda for cities.
 
-<h3>Critical interests</h3>
+<h3>Critical research on urbanism, technology, and society</h3>
 
 My professional work underpins my critical interests: how urban technologies and real estate development shape and are in turn shaped by the political economic regime of the contemporary city; the legibility and governance of emerging cyber-physical technology being deployed in urban space; technology controversies and technology counterfactuals; and evolving demands on the design professions to respond to these issues effectively.
 
