--- a/projects/data-vis-social-good/index.mdx
+++ b/projects/data-vis-social-good/index.mdx
@@ -8,7 +8,7 @@ thumb: "./thumb.gif"
 ---
 Over the years, I’ve developed and collaborated on data design projects that explore the potential of data visualization as a form of political intervention. 
 
-![Global migration](1.cluster-2.jpeg "As part of the data design curriculum at Northeastern, I developed a project visualizing global migration dynamics since the 1990s, highlighting the role that climate change and climate change-induced conflicts increasingly play in inducing migration.")
+![Global migration](un-migration.png "As part of the data design curriculum at Northeastern, I developed a project visualizing global migration dynamics since the 1990s, highlighting the role that climate change and climate change-induced conflicts increasingly play in inducing migration.")
 
 <h4>Art of the March</h4>
 
